cloudformation/eks-private-security-groups.yaml
---
AWSTemplateFormatVersion: '2010-09-09'

Description: Security groups required for the Private EKS Cluster

Parameters:
  UseLocalstackParam:
    Type: 'String'
    AllowedValues:
    - 'Yes'
    - 'No'
    Default: 'No'

Conditions:
  UseLocalstackConfiguration: !Equals [ !Ref UseLocalstackParam, 'Yes' ]
  UseNormalConfiguration: !Not [ !Equals [ !Ref UseLocalstackParam, 'Yes' ] ]

Resources:

  ControlPlaneNetPrefixList:
    Type: 'AWS::EC2::PrefixList'
    Condition: UseNormalConfiguration
    Properties:
      PrefixListName: 'CONTROL_PLANE_NET'
      AddressFamily: 'IPv4'
      MaxEntries: 1
      Entries:
        - Cidr: !ImportValue VpcCidr
          Description: 'CONTROL_PLANE_NET CIDR'
      Tags:
        - Key: 'Name'
          Value: 'CONTROL_PLANE_NET'

  WorkerNetPrefixList:
    Type: 'AWS::EC2::PrefixList'
    Condition: UseNormalConfiguration
    Properties:
      PrefixListName: 'NODE_NET'
      AddressFamily: 'IPv4'
      MaxEntries: 1
      Entries:
        - Cidr: !ImportValue PrivateVpcCidr
          Description: 'NODE_NET CIDR'
      Tags:
        - Key: 'Name'
          Value: 'NODE_NET'

  LocalNetPrefixList:
    Type: 'AWS::EC2::PrefixList'
    Condition: UseNormalConfiguration
    Properties:
      PrefixListName: 'LOCAL_NET'
      AddressFamily: 'IPv4'
      MaxEntries: 2
      Entries:
        - Cidr: !ImportValue VpcCidr
          Description: 'CONTROL_PLANE_NET CIDR'
        - Cidr: !ImportValue PrivateVpcCidr
          Description: 'NODE_NET CIDR'
      Tags:
        - Key: 'Name'
          Value: 'LOCAL_NET'

  CorpNetPrefixList:
    Type: 'AWS::EC2::PrefixList'
    Condition: UseNormalConfiguration
    Properties:
      PrefixListName: 'TRUSTED_NET'
      AddressFamily: 'IPv4'
      MaxEntries: 1
      Entries:
        - Cidr: !ImportValue TrustedNetworkCidr
          Description: 'TRUSTED_NET CIDR'
      Tags:
        - Key: 'Name'
          Value: 'TRUSTED_NET'

  AnyNetPrefixList:
    Type: 'AWS::EC2::PrefixList'
    Condition: UseNormalConfiguration
    Properties:
      PrefixListName: 'ANY_NET'
      AddressFamily: 'IPv4'
      MaxEntries: 2
      Entries:
        - Cidr: !ImportValue TrustedNetworkCidr
          Description: 'TRUSTED_NET CIDR'
        - Cidr: !ImportValue PrivateVpcCidr
          Description: 'NODE_NET CIDR'
      Tags:
        - Key: 'Name'
          Value: 'ANY_NET'

  S3PrefixList:
    Type: 'AWS::EC2::PrefixList'
    Condition: UseNormalConfiguration
    Properties:
      PrefixListName: 'S3_NET'
      AddressFamily: 'IPv4'
      MaxEntries: 1
      Entries:
        - Cidr: '0.0.0.0/0'
          Description: 'S3 Destinations on Internet IP Addresses which will be relayed via the S3 Gateway EndPoint'

  ClusterGeneralSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: The Cluster Security Group
      GroupName: 'ClusterGeneralSecurityGroup'
      VpcId:
        Fn::ImportValue: Vpc

  ControlPlane10250PortGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 10250/tcp within the cluster
      FromPort: 10250
      ToPort: 10250
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  ControlPlaneLocalstackIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseLocalstackConfiguration
    Properties:
      Description: Allow all traffic
      FromPort: 0
      ToPort: 65535
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0

  HttpsSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 443/tcp (HTTPS) within the cluster
      FromPort: 443
      ToPort: 443
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  Https2SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 9443/tcp (HTTPS) within the cluster
      FromPort: 9443
      ToPort: 9443
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  SshTcpSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 22/tcp (SSH) within the cluster
      FromPort: 22
      ToPort: 22
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  DnsTcpSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 53/tcp (DNS) within the cluster
      FromPort: 53
      ToPort: 53
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  DnsUdpSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 53/udp (DNS) within the cluster
      FromPort: 53
      ToPort: 53
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: udp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  LocalAllowAllSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow all traffic for EKS Nodes and Control Plane Communications
      IpProtocol: -1
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      SourcePrefixListId:
        Ref: LocalNetPrefixList

  ClusterGeneralSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: UseNormalConfiguration
    Properties:
      IpProtocol: -1
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      DestinationPrefixListId:
        Ref: AnyNetPrefixList

  S3ClusterGeneralSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 443/tcp (HTTPS) to S3, which could be on a number of IP addresses as it is relayed via the S3 VPC Endpoint Gateway
      FromPort: 443
      ToPort: 443
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      DestinationPrefixListId:
        Ref: S3PrefixList

  ControlPlaneLocalstackEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: UseLocalstackConfiguration
    Properties:
      Description: Allow all traffic
      FromPort: 0
      ToPort: 65535
      GroupId:
        Ref: ClusterGeneralSecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0

  ClusterAdditionalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: The Cluster Security Group
      GroupName: 'ClusterAdditionalSecurityGroup'
      VpcId:
        Fn::ImportValue: Vpc

  NodePortTcpClusterAdditionalSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow NodePort TCP ports (see https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport)
      FromPort: 30000
      ToPort: 32767
      GroupId:
        Ref: ClusterAdditionalSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  ClusterAdditionalSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseLocalstackConfiguration
    Properties:
      Description: Allow all traffic
      FromPort: 0
      ToPort: 65535
      GroupId:
        Ref: ClusterAdditionalSecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0

  HttpsClusterAdditionalSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 443/tcp (HTTPS) within the cluster
      FromPort: 443
      ToPort: 443
      GroupId:
        Ref: ClusterAdditionalSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  HttpClusterAdditionalSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 80/tcp (HTTPS) within the cluster
      FromPort: 80
      ToPort: 80
      GroupId:
        Ref: ClusterAdditionalSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  SshClusterAdditionalSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseNormalConfiguration
    Properties:
      Description: Allow port 22/tcp (DNS) within the cluster
      FromPort: 22
      ToPort: 22
      GroupId:
        Ref: ClusterAdditionalSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Ref: AnyNetPrefixList

  ClusterAdditionalSecurityGroupTcpAllEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: UseNormalConfiguration
    Properties:
      IpProtocol: -1
      GroupId:
        Ref: ClusterAdditionalSecurityGroup
      DestinationPrefixListId:
        Ref: AnyNetPrefixList

  ClusterAdditionalSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: UseLocalstackConfiguration
    Properties:
      Description: Allow all traffic
      FromPort: 0
      ToPort: 65535
      GroupId:
        Ref: ClusterAdditionalSecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0

Outputs:

  ClusterGeneralSecurityGroupId:
    Description: 'GroupId of ClusterGeneralSecurityGroup'
    Value:
      Fn::GetAtt:
        - 'ClusterGeneralSecurityGroup'
        - 'GroupId'
    Export:
      Name: 'ClusterGeneralSecurityGroupId'

  ClusterAdditionalSecurityGroupId:
    Description: 'GroupId of ClusterAdditionalSecurityGroup'
    Value:
      Fn::GetAtt:
        - 'ClusterAdditionalSecurityGroup'
        - 'GroupId'
    Export:
      Name: 'ClusterAdditionalSecurityGroupId'
